# Research-Assistant-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  research_assistant_requirements.md  research_assistant_technical_design.md
backend/: __init__.py  app.py
codex_handoff/: 00_PROJECT_CONTEXT.md  01_CURRENT_STATUS.md  02_DECISIONS.md  03_TODO.md  04_RUNBOOK.md  05_IMPORTANT_FILES.md  06_CHAT_SUMMARY.md
configs/: benchmark_profiles.example.json  geoloc_hard_questions.v1.jsonl  geoloc_realistic_gold.v1.jsonl  local_pipeline_profiles.json
docs/: admin_authorization_policy.md  agent_engineering_strengthening_plan.md  agent_replay_eval.md  context_search_evaluation_plan.md  database_migration_strategy.md  demo_runbook.md  deployment.md  depth_completion_plan.md  development_process.md  documentation_index.md  geoloc_eval_dataset_quality.md  geolocalization_benchmark_sota_table.md  geolocalization_manual_sota_review.md  graphrag_langgraph_deerflow_evaluation.md  local_agent_distribution.md  local_isolation.md  model_provider_strategy.md  product_effect_report.md  progress_log.md  project_skill_registry.md  real_paper_evaluation_report.md  representative_paper_review.md  research_assistant_requirements.md  research_assistant_technical_design.md  resume_alignment_closure.md  user_project_scoping_design.md  vector_store_strategy.md  workflow_queue_design.md  write_audit_retention_policy.md  write_operation_audit_design.md
migrations/: README.md  baseline_schema.json
scripts/: check_agent_replay.sh  (+59 more)
(+86 files in other folders)
