[project]
name = "research-assistant-agent"
version = "0.1.0"
description = "Evidence-grounded research idea assistant built from SuperMew's RAG lessons."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "langchain>=0.2.14",
    "langchain-core>=0.2.37",
    "langchain-openai>=0.1.22",
    "langgraph>=0.2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
